# The_game_of_life

./: README.md
data/: 0.txt  3.txt  res.xml
proj.android/: AndroidManifest.xml  build-run.bat  build-run.sh  build.gradle  settings.gradle
proj.android/jni/src/: Android.mk
proj.android/res/values/: strings.xml
proj.android/src/org/oxygine/The_game_of_life/: MainActivity.java
proj.cmake/: CMakeLists.txt  build_emsc.bat  build_emsc_release.bat  run.sh
proj.ios/The_game_of_life_ios.xcodeproj/: project.pbxproj
proj.ios_mac/The_game_of_life.xcodeproj/: project.pbxproj
proj.macosx/The_game_of_life_macosx.xcodeproj/: project.pbxproj
proj.win32/: The_game_of_life.sln  The_game_of_life.vcxproj
src/: Scene.cpp  Scene.h  button.cpp  button.h  editor.cpp  editor.h  example.cpp  example.h  field.cpp  field.h  main.cpp  menu.cpp  menu.h  modify_data.cpp  modify_data.h
